--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -8,7 +8,7 @@
     padding: 0 10vw;
 
     #navbar-logo {
-        height: 70%;
+        height: 50%;
     }
 
     #navlinks-list {
