--- a/src/styles/components/product_item.scss
+++ b/src/styles/components/product_item.scss
@@ -12,7 +12,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 100%;
+        width: 1px;
         height: 300px;
         border-right: 1px solid #F0F0F3;
     }
@@ -43,5 +43,21 @@
         line-height: 18px;
     }
 
-    
+    .dropdown-link-list .product-link {
+        margin-bottom: 12px;
+        color: #AAAAAD;
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+
+        strong {
+            color: #575759;
+        } 
+
+        i {
+            font-size: 18px;
+            vertical-align: middle;
+        }
+    }
 }
